# System-Playground

./: .dockerignore  .env.example  .eslintignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  backend.md  eslint.config.js  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
simulation-engine/: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
simulation-engine/src/: lib.rs
simulation-engine/src/cache/: mod.rs
simulation-engine/src/cpu/: mod.rs
simulation-engine/src/memory/: mod.rs
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: LevelObjective.jsx  LevelSelect.jsx
src/components/builder/: Canvas.jsx  ControlPanel.jsx  Sidebar.jsx
src/components/builder/nodes/: OSNodes.jsx
src/components/common/: Button.jsx
src/components/onboarding/: TutorialOverlay.jsx
src/components/os/: GanttChart.jsx  MetricsPanel.jsx  PropertiesPanel.jsx
src/levels/: LevelValidator.js
src/levels/definitions/: iot-network-levels.js  os-scheduler-levels.js  pc-architecture-levels.js  ram-simulator-levels.js
src/modules/iot-network/: IoTNetworkWithLevels.jsx
src/modules/iot-network/components/: Canvas.jsx  ControlPanel.jsx  IoTTutorialOverlay.jsx  MetricsPanel.jsx  Sidebar.jsx
src/modules/iot-network/nodes/: IoTNodes.jsx
src/modules/iot-network/simulation/: IoTEngine.js
src/modules/iot-network/store/: iotStore.js
src/modules/os-scheduler/: OSSchedulerWithLevels.jsx
src/modules/os-scheduler/components/: Canvas.jsx  ControlPanel.jsx  DeadlockPanel.jsx  GanttChart.jsx  MetricsPanel.jsx  PropertiesPanel.jsx  ResourceTutorial.jsx  Sidebar.jsx  ValidationPanel.jsx
src/modules/os-scheduler/nodes/: OSNodes.jsx  ResourceNodes.jsx
src/modules/os-scheduler/resources/: ResourceManager.js
src/modules/pc-architecture/: PCArchitectureWithLevels.jsx
src/modules/ram-simulator/: RAMSimulatorWithLevels.jsx
src/pages/: Home.jsx  ModuleSelector.jsx  RustCPUDemo.tsx
src/simulation/: OSEngine.js  RustCPUEmulator.ts
src/store/: progressStore.js  simulationStore.js
src/test/: Canvas.test.jsx  Home.test.jsx  Sidebar.test.jsx
tests/: setup.js
tests/unit/iot-network/: BatterySimulation.test.js
tests/unit/os-scheduler/: RoundRobin.test.js
tests/unit/pc-architecture/: CacheEngine.test.js
tests/unit/ram-simulator/: TLB.test.js
(+27 files in other folders)
