[package]
name = "simulation-engine"
version = "0.1.0"
edition = "2021"
authors = ["Visual System Builder Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3              # Maximum optimization
lto = true                 # Link-time optimization
codegen-units = 1          # Single codegen unit for better optimization
panic = 'abort'            # Smaller binary size
strip = true               # Strip debug symbols

[profile.dev]
opt-level = 0              # Fast compilation
