[package]
name = "visual-system-builder"
version = "0.1.0"
description = "Visual System Builder - Interactive educational simulator for computer systems"
authors = ["Visual System Builder Team"]
license = "MIT"
repository = "https://github.com/ieee-cs-bmsit/System-Playground"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
